[gd_scene load_steps=35 format=2]

[ext_resource path="res://src/AI/attack_range.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/etc/status_bars/npc_health/npc_health_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/AI/wander_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/characters/base_hurtbox.gd" type="Script" id=4]
[ext_resource path="res://src/characters/hands.gd" type="Script" id=5]
[ext_resource path="res://src/characters/crosshair.gd" type="Script" id=6]
[ext_resource path="res://src/characters/base_npc/base_npc_control.gd" type="Script" id=7]
[ext_resource path="res://src/AI/player_detection_zone.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/textures/harpy/shadow.png" type="Texture" id=9]
[ext_resource path="res://src/characters/base_npc/harpy/attack/harpy_projectile_attack.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/characters/base_npc/harpy/harpy_stats.gd" type="Script" id=11]
[ext_resource path="res://src/characters/base_npc/harpy/harpy.gd" type="Script" id=12]
[ext_resource path="res://assets/textures/harpy/harpy_sheet.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]
resource_name = "idle_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 4, 3, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_left_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 10, 9, 8, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left_up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 16, 15, 14, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_right_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 10, 9, 8, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_right_up "
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 16, 15, 14, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 22, 21, 20, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "idle_right_up "

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "idle_left_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=7]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( -0.6, 0.7 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( 0.6, 0.7 )
blend_point_4/node = SubResource( 18 )
blend_point_4/pos = Vector2( 1, 0 )
blend_point_5/node = SubResource( 19 )
blend_point_5/pos = Vector2( 0.6, -0.7 )
blend_point_6/node = SubResource( 20 )
blend_point_6/pos = Vector2( 0, -1.1 )
blend_point_7/node = SubResource( 21 )
blend_point_7/pos = Vector2( -0.6, -0.7 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=8]
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 537, 99 )
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="CapsuleShape2D" id=10]
radius = 5.49299
height = 18.0273

[sub_resource type="CircleShape2D" id=11]
radius = 78.622

[sub_resource type="CircleShape2D" id=12]
radius = 156.149

[sub_resource type="CircleShape2D" id=13]
radius = 17.9834

[node name="base_npc" type="KinematicBody2D"]
collision_layer = 2147483656
collision_mask = 2147483658
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_down = SubResource( 1 )
anims/idle_left_down = SubResource( 2 )
anims/idle_left_up = SubResource( 3 )
anims/idle_right_down = SubResource( 5 )
"anims/idle_right_up " = SubResource( 4 )
anims/idle_up = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )
parameters/idle/blend_position = Vector2( -0.00109208, -0.00188684 )

[node name="AttackPlayer" type="AnimationPlayer" parent="."]

[node name="pivot" type="Position2D" parent="."]

[node name="sprite" type="Sprite" parent="pivot"]
position = Vector2( 0, -0.288512 )
texture = ExtResource( 13 )
hframes = 24
frame = 13

[node name="hands" type="Sprite" parent="pivot"]
script = ExtResource( 5 )

[node name="shadow" type="Sprite" parent="pivot"]
position = Vector2( 0, 15 )
texture = ExtResource( 9 )

[node name="attack" parent="." instance=ExtResource( 10 )]

[node name="collision_box" type="CollisionShape2D" parent="."]
position = Vector2( -0.280617, 13.7502 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_range" parent="control" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" parent="control/attack_range" index="0"]
shape = SubResource( 11 )

[node name="player_detection_zone" parent="control" instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="control/player_detection_zone" index="0"]
position = Vector2( -1.66855, 0.667419 )
shape = SubResource( 12 )

[node name="wander_controller" parent="control" instance=ExtResource( 3 )]

[node name="stats" type="Node" parent="."]
script = ExtResource( 11 )

[node name="StatusBar" type="Node2D" parent="."]
position = Vector2( 0, 30 )
z_index = 3

[node name="statusBar" parent="StatusBar" instance=ExtResource( 2 )]
margin_left = -58.8658
margin_top = -80.2716
margin_right = -58.8658
margin_bottom = -80.2716

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 13 )

[node name="crosshair" type="Position2D" parent="."]
z_index = 999
z_as_relative = false
script = ExtResource( 6 )

[node name="sprite" type="Sprite" parent="crosshair"]
[connection signal="damage_from_behind" from="stats" to="control/player_detection_zone" method="_on_stats_damage_from_behind"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]

[editable path="control/attack_range"]

[editable path="control/player_detection_zone"]

[editable path="control/wander_controller"]
